--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,6 +8,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Log In</button>
+  <button type="Submit">Log In</button>
 </form>
 {% endblock %}
