--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -4,6 +4,7 @@
 {% block title %}Email Sent{% endblock %}
 
 {% block content %}
-  <h1>Check your inbox.</h1>
+  <h1> Please Check your inbox.</h1>
   <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+  <p>Thank</p>
 {% endblock %}
