--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,23 @@
 <!-- templates/registration/login.html -->
 {% extends 'registration/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+<div class="row justify-content-center">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <h2>Log in</h2>
+        <form method="post" novalidate>
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit" class="btn btn-primary">Log in</button>
+          <a href="{% url 'password_reset' %}" class="btn btn-link">Forgot your password?</a>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
