--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,13 +1,24 @@
-<!-- templates/registration/signup.html -->
 {% extends 'registration/base.html' %}
+{% load crispy_forms_tags %}
 
-{% block title %}Sign Up{% endblock %}
+
+{% block title %}Sign Up{% endblock %} 
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
-{% endblock %}
+<div class="row justify-content-center">
+    <div class="col-8">
+      <div class="card">
+        <div class="card-body">
+          <h2>Sign Up</h2>
+          <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+			signup
+            <button type="submit" class="btn btn-primary">Sign up</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
+
